--- a/src/server/index.html
+++ b/src/server/index.html
@@ -1,7 +1,3 @@
-<?php
-   date_default_timezone_set('PRC');
-   $isDark = isset($_GET['isDark']) ? (bool)$_GET['isDark'] : true;
-?>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -11,10 +7,23 @@
     <!-- Pre v1.0.0 versions need the minified css -->
     <!-- <link rel='stylesheet' href='https://unpkg.com/v-calendar/lib/v-calendar.min.css'> -->
     <style>
+      :root {
+          color-scheme: light dark;
+          --background-color: white;
+      }
+
+      @media screen and (prefers-color-scheme: dark) {
+        :root {
+          /* Redefining color variables for dark theme */
+          --background-color: #1A202C;
+        }
+      }
+
       body
       {
-          background-color: <?php echo $isDark ? '#1A202C': 'white';?>;
+          background-color: var(--background-color);
       }
+
     </style>
   </head>
 
@@ -47,17 +56,20 @@
 
     <!--3. Create the Vue instance-->
 <script>
+      const isDarkMode = window.matchMedia("(prefers-color-scheme: dark)").matches
+      console.log(`isDark: ${isDarkMode}`)
+
       new Vue({
         el: '#here',
         data: {
           mode: 'single',
-          color: <?php echo json_encode($isDark ? 'red' : 'green');?>,
-          darkMode: <?php echo json_encode($isDark);?>,
+          color: isDarkMode ? 'red' : 'green',
+          darkMode: isDarkMode,
           attrs: [
             {
               key: 'today',
               highlight: true,
-              dates: new Date(<?php echo json_encode(date('D M d Y H:i:s O'));?>),
+              dates: new Date(),
             },
             {
               dot: true,
